# hl-scai

./: ACTION_README.md  CHANGELOG.md  CODING_GUIDELINES.md  CONTRIBUTING.md  Makefile  README.md  action.yml  pyproject.toml  setup.py  streamlit_app.py
.github/examples/: sample_ai_usage.py
.github/scripts/: process-results.py
.github/workflows/: ci.yml  scorecard.yml
examples/: README.md
examples/workflows/: example-advanced.yml  example-basic.yml  external-repo-basic.yml  external-repo-policy.yml  external-repo-pr-comment.yml  external-repo-scheduled.yml
hl_scai/: __init__.py  core.py  py.typed
hl_scai/clients/: huggingface.py
hl_scai/config/: settings.py
hl_scai/constants/: anthropic.py  openai.py
hl_scai/entrypoint/: cli.py
hl_scai/models/: analysis.py  ast.py
hl_scai/scanners/ast/: scanner.py  visitors.py
tests/: README.md  __init__.py  conftest.py
tests/unit/: __init__.py  test_ast_scanner.py  test_ast_visitors.py  test_cli.py  test_config.py  test_core.py  test_huggingface_client.py  test_models.py
